--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -59,8 +59,8 @@ body {
   font-family: "Roboto", sans-serif;
   --base-color: #838694;
   --heading-color: #1b1f2e;
-  --primary-color: #30f0b6;
-  --secondary-color: #674df3;
+  --primary-color: #01E8FC;
+  --secondary-color: #01E8FC;
   --lighter-color: #f7f7f9;
   --border-color: rgba(21, 16, 31, 0.1); }
 
