mejorar vista principal

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -60,7 +60,7 @@ body {
   --base-color: #838694;
   --heading-color: #1b1f2e;
   --primary-color: #01E8FC;
-  --secondary-color: #01E8FC;
+  --secondary-color: #4A52D8;
   --lighter-color: #f7f7f9;
   --border-color: rgba(21, 16, 31, 0.1); }
 
