--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -57,12 +57,14 @@ body {
   line-height: 32px;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
-  --base-color: #838694;
+  --color-icon-navbar: #D7E6FF;
+  --base-color: #737683;
   --heading-color: #1b1f2e;
   --primary-color: #01E8FC;
   --secondary-color: #4A52D8;
   --lighter-color: #f7f7f9;
-  --border-color: rgba(21, 16, 31, 0.1); }
+  --border-color: rgba(21, 16, 31, 0.1); 
+}
 
 a {
   color: var(--base-color);
@@ -895,7 +897,19 @@ a.theme-btn {
   background-color: #0f1425; }
 
 .bgc-gray {
-  background-color: var(--heading-color); }
+  /* background-color: var(--heading-color);  */
+  /* background: linear-gradient(180deg, #11449b, #AFCFFF); */
+  background: linear-gradient(90deg, #11449b, #4375c0, #acc7f7);
+  /* background-image: url('../images/logos/header_brasper.png');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;  */
+
+  }
+
+.bgc-header1{
+  background-color: #11449b;
+}
 
 .bgc-primary {
   background-color: var(--primary-color); }
@@ -3657,7 +3671,7 @@ h6, .h6 {
   margin-top: -50px;
   margin-right: 25px;
   padding: 25px 30px;
-  background: var(--secondary-color);
+  background: var(--color-icon-navbar);
   -webkit-clip-path: polygon(6% 0%, 100% 0%, 94% 100%, 0% 100%);
   clip-path: polygon(6% 0%, 100% 0%, 94% 100%, 0% 100%); }
 
@@ -8643,7 +8657,7 @@ blockquote {
 .footer-logo {
   padding: 25px 30px;
   display: inline-block;
-  background: var(--secondary-color);
+  background: var(--color-icon-navbar);
   -webkit-clip-path: polygon(6% 0%, 100% 0%, 94% 100%, 0% 100%);
   clip-path: polygon(6% 0%, 100% 0%, 94% 100%, 0% 100%); }
 
