--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8750,17 +8750,16 @@ blockquote {
     bottom: 10%;
     z-index: -1; }
 
+/*        login                    */
 
 
-    /*Login y autenficacion*/
-
-    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
                     * {
                         box-sizing: border-box;
                     }
 
-                    body {
+                    /* body {
                         background: #f6f5f7;
                         display: flex;
                         justify-content: center;
@@ -8768,7 +8767,7 @@ blockquote {
                         flex-direction: column;
                         font-family: 'Montserrat', sans-serif;
                         height: 100vh;
-                    }
+                    } */
 
                     h1 {
                         font-weight: bold;
@@ -8798,7 +8797,7 @@ blockquote {
                         margin: 15px 0;
                     }
 
-                    button {
+                    /* button {
                         border-radius: 20px;
                         border: 1px solid #9a66cd;
                         background-color: #9a66cd;
@@ -8809,7 +8808,7 @@ blockquote {
                         letter-spacing: 1px;
                         text-transform: uppercase;
                         transition: transform 80ms ease-in;
-                    }
+                    } */
 
                     button:active {
                         transform: scale(0.95);
@@ -8843,7 +8842,7 @@ blockquote {
                         width: 100%;
                     }
 
-                    .container {
+                    .container_login {
                         background-color: #fff;
                         border-radius: 10px;
                         box-shadow: 0 14px 28px rgba(0,0,0,0.25),
@@ -8980,27 +8979,7 @@ blockquote {
                         width: 40px;
                     }
 
-                    footer {
-                        background-color: #222;
-                        color: #fff;
-                        font-size: 14px;
-                        bottom: 0;
-                        position: fixed;
-                        left: 0;
-                        right: 0;
-                        text-align: center;
-                        z-index: 999;
-                    }
+                    
 
-                    footer p {
-                        margin: 10px 0;
-                    }
 
-                    footer i {
-                        color: red;
-                    }
-
-                    footer a {
-                        color: #3c97bf;
-                        text-decoration: none;
-                    }
+    
