--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8979,7 +8979,119 @@ blockquote {
                         width: 40px;
                     }
 
-                    
+      /*calculadora*/
+      
+      
 
+      .calculator-container {
+        background-color: white;
+        border-radius: 10px;
+        padding: 20px;
+        width: 300px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      }
+      
+      .calculator-header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+      }
+      
+      .calculator-btn {
+        background-color: #e5e6e7;
+        border: none;
+        padding: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        flex: 1;
+        margin-right: 5px;
+      }
+      
+      .currency-switch {
+        display: flex;
+        justify-content: space-between;
+        margin: 10px 0;
+      }
+      
+      .currency-option {
+        flex: 1;
+        background-color: #f0f0f0;
+        border: none;
+        padding: 8px;
+        text-align: center;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      
+      .currency-option.active {
+        background-color: #4266f5;
+        color: white;
+      }
+      
+      .currency-inputs {
+        margin-bottom: 10px;
+      }
+      
+      .currency-row {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+      }
+      
+      .currency-flag {
+        margin-right: 5px;
+        font-size: 24px;
+      }
+      
+      .currency-input {
+        flex: 1;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        font-size: 16px;
+      }
+      
+      .coupon-section {
+        display: flex;
+        margin-bottom: 10px;
+      }
+      
+      .coupon-input {
+        flex: 1;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+      }
+      
+      .apply-btn {
+        background-color: #4266f5;
+        color: white;
+        border: none;
+        padding: 10px;
+        border-radius: 15px;
+        margin-left: 5px;
+        cursor: pointer;
+      }
+      
+      .savings-info {
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 14px;
+        color: #777;
+      }
+      
+      .start-operation-btn {
+        background-color: #ffcc00;
+        border: none;
+        padding: 10px;
+        width: 100%;
+        border-radius: 20px;
+        cursor: pointer;
+        font-size: 16px;
+      }
 
+      /*slider de bancos */
+
+      
+      
     
