--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -4722,7 +4722,7 @@ textarea.form-control-lg {
 .navbar > .container-xxl {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  /* display: flex; */
   -ms-flex-wrap: inherit;
       flex-wrap: inherit;
   -webkit-box-align: center;
@@ -21824,8 +21824,8 @@ a.text-primary-hover:hover, button.text-primary-hover:hover {
 }
 .page-content .page-content-wrapper {
   min-height: 86vh;
-  margin: 1.5rem 1.5rem;
-  padding: 1.5rem;
+  margin: 1.5rem 3rem;
+  padding: 1rem;
   background: var(--bs-body-bg);
   -webkit-box-shadow: 0px 0px 40px rgba(29, 58, 83, 0.15);
           box-shadow: 0px 0px 40px rgba(29, 58, 83, 0.15);
