--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4430,6 +4430,22 @@ h6,
 .header-inner .social-style-two {
   margin-left: 30px;
 }
+
+.header-inner img {
+  padding: 2.5%;
+}
+
+/* Estilo para pantallas móviles */
+@media only screen and (max-width: 767px) {
+  .header-inner img {
+    padding: 3%;
+  }
+}
+
+.header-inner .social-style-two {
+  margin-left: 30px;
+}
+
 @media only screen and (max-width: 1399px) {
   .header-inner .social-style-two {
     display: none;
@@ -4709,12 +4725,12 @@ h6,
   }
 }
 
-.main-header.header-one .mobile-logo {
+/* .main-header.header-one .mobile-logo {
   padding: 10px 25px;
   background: var(--secondary-color);
   -webkit-clip-path: polygon(6% 0%, 100% 0%, 94% 100%, 0% 100%);
   clip-path: polygon(6% 0%, 100% 0%, 94% 100%, 0% 100%);
-}
+} */
 .main-header.header-one .mobile-logo img {
   max-height: 50px;
 }
