traduccion completa de la calculadora

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -206,7 +206,7 @@ button:focus,
   outline: none;
   -webkit-box-shadow: none;
   box-shadow: none;
-  border-color: #cfdbf1;
+  border-color: #436ab3;
 }
 
 input[type="search"]::-ms-clear {
