--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4826,6 +4826,19 @@ h6,
   background: var(--primary-color);
   border-left: 3px solid white;
 }
+
+@media only screen and (max-width: 768px) {
+  .hero-content  {
+    padding-bottom: 0%;
+    padding-top: 0%;
+  }
+
+  .hero-content a {
+    display: none; /* Oculta el enlace en móviles */
+
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .hero-content .sub-title {
     font-size: 18px;
