--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,7 +58,7 @@ body {
   line-height: 32px;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
-  --color-icon-navbar: #d7e6ff;
+  --color-icon-navbar: #d7e6ff00;
   --base-color: #737683;
   --heading-color: #1b1f2e;
   --primary-color: #01e8fc;
@@ -11077,7 +11077,8 @@ blockquote .name:before {
 .footer-logo {
   padding: 25px 30px;
   display: inline-block;
-  background: #d7e6ff00;
+  /* background: #d7e6ff00; */
+  background: var(--color-icon-navbar);
   -webkit-clip-path: polygon(6% 0%, 100% 0%, 94% 100%, 0% 100%);
   clip-path: polygon(6% 0%, 100% 0%, 94% 100%, 0% 100%);
 }
